# JibToHeb-MCP

./: .gitignore  README.md
.cursor/rules/: jibberish-hebrew-mcp.mdc
.github/workflows/: publish-pypi.yml
jibberish_to_hebrew_mcp/: README.md  keyboard_map.py  pyproject.toml  server.json  server.py
jibberish_to_hebrew_mcp/jibberish_to_hebrew_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mcps/jibberish-to-hebrew/: SERVER_METADATA.json
mcps/jibberish-to-hebrew/tools/: hebrew_to_qwerty_text.json  qwerty_to_hebrew_text.json
